--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    
   </head>
   <body>
-    <form action="">
-      <input type="text">
-      <button type="submit">Start</button>
+    <form class="form" action="">
+      <input class="form__search" type="search" placeholder="Search images...">
+      <button class="form__btn" type="submit">Start</button>
     </form>
 
     <script type="module" src="./main.js"></script>
